--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230323211458">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230325113745">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__popular popular-page">
+			<section data-watch data-watch-once data-watch-threshold="0.4" class="page__popular popular-page">
 				<div class="popular-page__container">
 					<h3 class="popular-page__title title title--big">Популярні товари</h3>
 					<div class="popular-page__row">
@@ -371,7 +371,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__partners partners">
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__partners partners">
 				<div class="partners__container">
 					<div class="partners__title title title--big">Наші партнери</div>
 					<!-- Оболонка слайдера -->
@@ -420,8 +420,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="partners__pagination swiper-pagination"></div>
 					</div>
+					<div class="partners__pagination swiper-pagination"></div>
 				</div>
 			</section>
 			<section data-watch data-watch-once data-watch-threshold="0.3" class=" page__response response">
@@ -674,10 +674,85 @@
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+					<div class="spoller-footer__item">
+						<button type="button" data-spoller class="spoller-footer__title">Контакти</button>
+						<div class="spoller-footer__body">
+							<a href="#" class="spoller-footer__link _icon-map-pin">вул. Шевченка, 4, м. Здолбунів, Україна</a>
+							<div class="spoller-footer__phone _icon-phone">
+								<a href="+380979193134" class="spoller-footer__link">+380 (97) 919-31-34,</a>
+								<a href="+380996113391" class="spoller-footer__link">+380 (99) 611-33-91</a>
+							</div>
+							<a href="avtoshop_2010@ukr.net" class="spoller-footer__link _icon-mail">avtoshop_2010@ukr.net</a>
+							<div class="spoller-footer__social">
+								<a href="#" class="_icon-viber"></a>
+								<a href="#" class="_icon-whatsap"></a>
+								<a href="#" class="_icon-telegram"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+					<div class="spoller-footer__item">
+						<button type="button" data-spoller class="spoller-footer__title">Доставка та оплата</button>
+						<ul class="spoller-footer__body">
+							<li class="spoller-footer__link _icon-cart">
+								<a href="#">Замовлення</a>
+							</li>
+							<li class="spoller-footer__link _icon-credit-card">
+								<a href="#">Оплата</a>
+							</li>
+							<li class="spoller-footer__link _icon-truck">
+								<a href="#">Доставка</a>
+							</li>
+							<li class="spoller-footer__link _icon-pin">
+								<a href="#">Умови користування</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+					<div class="spoller-footer__item">
+						<button type="button" data-spoller class="spoller-footer__title">Навігація</button>
+						<ul class="spoller-footer__body">
+							<li class="spoller-footer__link">
+								<a href="#" class="">Головна</a>
+							</li>
+							<li class="spoller-footer__link">
+								<a href="#" class="">Каталог</a>
+							</li>
+							<li class="spoller-footer__link">
+								<a href="#" class="">Про нас</a>
+							</li>
+							<li class="spoller-footer__link">
+								<a href="#" class="">Контакти</a>
+							</li>
+							<li class="spoller-footer__link">
+								<a href="#" class="">Кошик</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+					<div class="spoller-footer__item">
+						<button type="button" data-spoller class="spoller-footer__title">Графік роботи</button>
+						<div class="spoller-footer__body ">
+							<div class="spoller-footer__schedule">
+								<div class="spoller-footer__day _icon-calendar">Пн.- Пт. :</div>
+								<div class="spoller-footer__hours _icon-clock">09:00 - 17:00</div>
+								<div class="spoller-footer__day _icon-calendar">Субота :</div>
+								<div class="spoller-footer__hours _icon-clock">10:00 - 14:00</div>
+								<div class="spoller-footer__day _icon-calendar">Неділя :</div>
+								<div class="spoller-footer__hours _icon-clock">Вихідний день</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer__copyright _icon-copyright">Інтернет-магазин "АвтоЕксперт", 2023</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230323211458"></script>
+	<script src="js/app.min.js?_v=20230325113745"></script>
 </body>
 
 </html>
