--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230325113745">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230326193941">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header data-scroll="100" data-scroll-show="500" class="header">
+		<header data-scroll="100" data-scroll-show="500" class="header" data-lp>
 			<div class="header__container">
 				<div class="header__top top-header">
 					<a href="#" class="top-header__logo"><img src="img/Logo.svg" alt="logo"></a>
@@ -44,7 +44,7 @@
 							<a href="+380979193134" class="action-header__phone">+380 (97) 919-31-34</a>
 							<a href="+380996113391" class="action-header__phone">+380 (99) 611-33-91</a>
 						</div>
-						<a href="#" class="action-header__cart _icon-cart"><span>0</span></a>
+						<a href="#" data-popup="#cart-full" class="action-header__cart _icon-cart"><span>0</span></a>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 						<div class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product.png" alt="photo"></picture>
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -110,7 +110,7 @@
 						<div class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/Screenshot_3.jpg" alt="photo"></picture>
+									<picture><source data-srcset="img/product/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_3.jpg" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -137,7 +137,7 @@
 						<div class="popular-page__card product-card _stock-out">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product.png" alt="photo"></picture>
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -163,7 +163,7 @@
 						<div class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product.png" alt="photo"></picture>
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -189,7 +189,7 @@
 						<div class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/Screenshot_2.jpg" alt="photo"></picture>
+									<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -215,7 +215,7 @@
 						<div class="popular-page__card product-card _stock-out">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/Screenshot_2.jpg" alt="photo"></picture>
+									<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -671,6 +671,7 @@
 					</div>
 				</div>
 			</section>
+			<button type="button" data-lp data-goto=".page__main" class="page__button button-up _icon-arrow"></button>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -752,7 +753,173 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230325113745"></script>
+	<!-- <div id="popup" aria-hidden="true" class="popup">
+	<div class="popup__wrapper">
+		<div class="popup__content">
+			<button data-close type="button" class="popup__close">Закрити</button>
+			<div class="popup__text">
+				Text
+			</div>
+		</div>
+	</div>
+</div> -->
+
+	<div id="cart-empty" aria-hidden="true" class="popup popup-cart-empty">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<div class="popup__text content-cart">
+					<div class="content-cart__header">
+						<button data-close type="button" class="content-cart__close _icon-arrow"></button>
+						<div class="content-cart__title">Кошик</div>
+					</div>
+					<div class="content-cart__body body-cart">
+						<div class="body-cart__image">
+							<img src="img/popup/shopping-cart.svg" alt="cart">
+						</div>
+						<p class="body-cart__title">Кошик порожній</p>
+						<p class="body-cart__text">Але це ніколи не пізно виправити :)</p>
+						<button type="button" class="body-cart__btn button button--blue">За покупками</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="cart-full" aria-hidden="true" class="popup popup-cart-full">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<div class="popup__text content-cart">
+					<div class="content-cart__header">
+						<button data-close type="button" class="content-cart__close _icon-arrow"></button>
+						<div class="content-cart__title">Кошик</div>
+					</div>
+					<div class="content-cart__body">
+						<ul class="content-cart__list">
+							<li class="content-cart__card content-card">
+								<a href="#" class="content-card__image">
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+								</a>
+								<div class="content-card__info info-product">
+									<div class="info-product__item item-info">
+										<div class="item-info__main">
+											<div class="item-info__code">Код: <span>ISS20301B</span></div>
+											<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+												ISSIKSAN)</a>
+											<div class="item-info__price"><span>200</span> грн/шт.</div>
+										</div>
+										<button type="button" class="item-info__delete _icon-delete"></button>
+									</div>
+									<div class="info-product__total total-info">
+										<div class="total-info__quantity">
+											<div data-quantity class="quantity">
+												<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+												<div class="quantity__input">
+													<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+												</div>
+												<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+											</div>
+										</div>
+										<div class="total-info__sum"><span>199</span>грн</div>
+									</div>
+								</div>
+							</li>
+							<li class="content-cart__card content-card">
+								<a href="#" class="content-card__image">
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+								</a>
+								<div class="content-card__info info-product">
+									<div class="info-product__item item-info">
+										<div class="item-info__main">
+											<div class="item-info__code">Код: <span>ISS20301B</span></div>
+											<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+												ISSIKSAN)</a>
+											<div class="item-info__price"><span>200</span> грн/шт.</div>
+										</div>
+										<button type="button" class="item-info__delete _icon-delete"></button>
+									</div>
+									<div class="info-product__total total-info">
+										<div class="total-info__quantity">
+											<div data-quantity class="quantity">
+												<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+												<div class="quantity__input">
+													<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+												</div>
+												<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+											</div>
+										</div>
+										<div class="total-info__sum"><span>199</span>грн</div>
+									</div>
+								</div>
+							</li>
+							<li class="content-cart__card content-card">
+								<a href="#" class="content-card__image">
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+								</a>
+								<div class="content-card__info info-product">
+									<div class="info-product__item item-info">
+										<div class="item-info__main">
+											<div class="item-info__code">Код: <span>ISS20301B</span></div>
+											<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+												ISSIKSAN)</a>
+											<div class="item-info__price"><span>200</span> грн/шт.</div>
+										</div>
+										<button type="button" class="item-info__delete _icon-delete"></button>
+									</div>
+									<div class="info-product__total total-info">
+										<div class="total-info__quantity">
+											<div data-quantity class="quantity">
+												<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+												<div class="quantity__input">
+													<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+												</div>
+												<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+											</div>
+										</div>
+										<div class="total-info__sum"><span>199</span>грн</div>
+									</div>
+								</div>
+							</li>
+						</ul>
+						<li class="content-cart__card content-card">
+							<a href="#" class="content-card__image">
+								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+							</a>
+							<div class="content-card__info info-product">
+								<div class="info-product__item item-info">
+									<div class="item-info__main">
+										<div class="item-info__code">Код: <span>ISS20301B</span></div>
+										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+											ISSIKSAN)</a>
+										<div class="item-info__price"><span>200</span> грн/шт.</div>
+									</div>
+									<button type="button" class="item-info__delete _icon-delete"></button>
+								</div>
+								<div class="info-product__total total-info">
+									<div class="total-info__quantity">
+										<div data-quantity class="quantity">
+											<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+											<div class="quantity__input">
+												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+											</div>
+											<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+										</div>
+									</div>
+									<div class="total-info__sum"><span>199</span>грн</div>
+								</div>
+							</div>
+						</li>
+						</ul>
+					</div>
+					<div class="content-cart__footer footer-cart">
+						<div class="footer-cart__total">До оплати без доставки: </div>
+						<div class="footer-cart__value">1990 грн</div>
+						<button type="button" class="footer-cart__btn button button--blue">Оформити замовлення</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/app.min.js?_v=20230326193941"></script>
 </body>
 
 </html>
