--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html#"></a></li>
+			<li><a target="_blank" href="home.html#cart-empty">Порожній кошик</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
