--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230326193941">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230327212750">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
 							<a href="+380979193134" class="action-header__phone">+380 (97) 919-31-34</a>
 							<a href="+380996113391" class="action-header__phone">+380 (99) 611-33-91</a>
 						</div>
-						<a href="#" data-popup="#cart-full" class="action-header__cart _icon-cart"><span>0</span></a>
+						<a href="#" data-popup="#cart-empty" class="action-header__cart _icon-cart"><span>0</span></a>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</div>
 				</div>
@@ -908,6 +908,34 @@
 								</div>
 							</div>
 						</li>
+						<li class="content-cart__card content-card">
+							<a href="#" class="content-card__image">
+								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+							</a>
+							<div class="content-card__info info-product">
+								<div class="info-product__item item-info">
+									<div class="item-info__main">
+										<div class="item-info__code">Код: <span>ISS20301B</span></div>
+										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+											ISSIKSAN)</a>
+										<div class="item-info__price"><span>200</span> грн/шт.</div>
+									</div>
+									<button type="button" class="item-info__delete _icon-delete"></button>
+								</div>
+								<div class="info-product__total total-info">
+									<div class="total-info__quantity">
+										<div data-quantity class="quantity">
+											<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+											<div class="quantity__input">
+												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+											</div>
+											<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+										</div>
+									</div>
+									<div class="total-info__sum"><span>199</span>грн</div>
+								</div>
+							</div>
+						</li>
 						</ul>
 					</div>
 					<div class="content-cart__footer footer-cart">
@@ -919,7 +947,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230326193941"></script>
+	<script src="js/app.min.js?_v=20230327212750"></script>
 </body>
 
 </html>
