--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html#cart-empty">Порожній кошик</a></li>
+			<li><a target="_blank" href="home.html#cart-full">Кошик з товаром</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
