--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230327212750">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230327220122">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
 							<a href="+380979193134" class="action-header__phone">+380 (97) 919-31-34</a>
 							<a href="+380996113391" class="action-header__phone">+380 (99) 611-33-91</a>
 						</div>
-						<a href="#" data-popup="#cart-empty" class="action-header__cart _icon-cart"><span>0</span></a>
+						<a href="#" data-popup="#cart-full" class="action-header__cart _icon-cart"><span>0</span></a>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</div>
 				</div>
@@ -693,7 +693,7 @@
 						</div>
 					</div>
 				</div>
-				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+				<div data-spollers="1200, max" class="footer__spollers spoller-footer">
 					<div class="spoller-footer__item">
 						<button type="button" data-spoller class="spoller-footer__title">Доставка та оплата</button>
 						<ul class="spoller-footer__body">
@@ -712,7 +712,7 @@
 						</ul>
 					</div>
 				</div>
-				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+				<div data-spollers="1200, max" class="footer__spollers spoller-footer">
 					<div class="spoller-footer__item">
 						<button type="button" data-spoller class="spoller-footer__title">Навігація</button>
 						<ul class="spoller-footer__body">
@@ -734,7 +734,7 @@
 						</ul>
 					</div>
 				</div>
-				<div data-spollers="767.98, max" class="footer__spollers spoller-footer">
+				<div data-spollers="1200, max" class="footer__spollers spoller-footer">
 					<div class="spoller-footer__item">
 						<button type="button" data-spoller class="spoller-footer__title">Графік роботи</button>
 						<div class="spoller-footer__body ">
@@ -947,7 +947,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230327212750"></script>
+	<script src="js/app.min.js?_v=20230327220122"></script>
 </body>
 
 </html>
