--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230327220122">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230329205345">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -155,7 +155,7 @@
 										<div class="info__price">199 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
 						</div>
@@ -753,44 +753,44 @@
 			</div>
 		</footer>
 	</div>
-	<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрити</button>
-			<div class="popup__text">
-				Text
+	<div id="popup" aria-hidden="true" class="popup">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close">Закрити</button>
+				<div class="popup__text">
+					POPUP
+				</div>
 			</div>
 		</div>
 	</div>
-</div> -->
 
-	<div id="cart-empty" aria-hidden="true" class="popup popup-cart-empty">
+	<div id="cart-empty" aria-hidden="true" class="popup popup--cart-empty">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<div class="popup__text content-cart">
-					<div class="content-cart__header">
-						<button data-close type="button" class="content-cart__close _icon-arrow"></button>
-						<div class="content-cart__title">Кошик</div>
+				<button data-close type="button" class="popup__close _icon-arrow"></button>
+				<div class="content-cart-empty">
+					<div class="content-cart-empty__header">
+						<div class="content-cart-empty__title">Кошик</div>
 					</div>
-					<div class="content-cart__body body-cart">
-						<div class="body-cart__image">
+					<div class="content-cart-empty__body body-cart-empty">
+						<div class="body-cart-empty__image">
 							<img src="img/popup/shopping-cart.svg" alt="cart">
 						</div>
-						<p class="body-cart__title">Кошик порожній</p>
-						<p class="body-cart__text">Але це ніколи не пізно виправити :)</p>
-						<button type="button" class="body-cart__btn button button--blue">За покупками</button>
+						<p class="body-cart-empty__title">Кошик порожній</p>
+						<p class="body-cart-empty__text">Але це ніколи не пізно виправити :)</p>
+						<button type="button" class="body-cart-empty__btn button button--blue">За покупками</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="cart-full" aria-hidden="true" class="popup popup-cart-full">
+	<div id="cart-full" aria-hidden="true" class="popup popup--cart-full">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<div class="popup__text content-cart">
+				<button data-close type="button" class="popup__close _icon-arrow"></button>
+				<div class="content-cart">
 					<div class="content-cart__header">
-						<button data-close type="button" class="content-cart__close _icon-arrow"></button>
 						<div class="content-cart__title">Кошик</div>
 					</div>
 					<div class="content-cart__body">
@@ -879,8 +879,35 @@
 									</div>
 								</div>
 							</li>
-						</ul>
-						<li class="content-cart__card content-card">
+							<li class="content-cart__card content-card">
+								<a href="#" class="content-card__image">
+									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+								</a>
+								<div class="content-card__info info-product">
+									<div class="info-product__item item-info">
+										<div class="item-info__main">
+											<div class="item-info__code">Код: <span>ISS20301B</span></div>
+											<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+												ISSIKSAN)</a>
+											<div class="item-info__price"><span>200</span> грн/шт.</div>
+										</div>
+										<button type="button" class="item-info__delete _icon-delete"></button>
+									</div>
+									<div class="info-product__total total-info">
+										<div class="total-info__quantity">
+											<div data-quantity class="quantity">
+												<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+												<div class="quantity__input">
+													<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+												</div>
+												<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+											</div>
+										</div>
+										<div class="total-info__sum"><span>199</span>грн</div>
+									</div>
+								</div>
+							</li>
+							<!-- <li class="content-cart__card content-card">
 							<a href="#" class="content-card__image">
 								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
 							</a>
@@ -897,45 +924,19 @@
 								<div class="info-product__total total-info">
 									<div class="total-info__quantity">
 										<div data-quantity class="quantity">
-											<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+											<button data-quantity-minus type="button"
+												class="quantity__button quantity__button_minus"></button>
 											<div class="quantity__input">
 												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
 											</div>
-											<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+											<button data-quantity-plus type="button"
+												class="quantity__button quantity__button_plus"></button>
 										</div>
 									</div>
 									<div class="total-info__sum"><span>199</span>грн</div>
 								</div>
 							</div>
-						</li>
-						<li class="content-cart__card content-card">
-							<a href="#" class="content-card__image">
-								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
-							</a>
-							<div class="content-card__info info-product">
-								<div class="info-product__item item-info">
-									<div class="item-info__main">
-										<div class="item-info__code">Код: <span>ISS20301B</span></div>
-										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
-											ISSIKSAN)</a>
-										<div class="item-info__price"><span>200</span> грн/шт.</div>
-									</div>
-									<button type="button" class="item-info__delete _icon-delete"></button>
-								</div>
-								<div class="info-product__total total-info">
-									<div class="total-info__quantity">
-										<div data-quantity class="quantity">
-											<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
-											<div class="quantity__input">
-												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
-											</div>
-											<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
-										</div>
-									</div>
-									<div class="total-info__sum"><span>199</span>грн</div>
-								</div>
-							</div>
-						</li>
+						</li> -->
 						</ul>
 					</div>
 					<div class="content-cart__footer footer-cart">
@@ -947,7 +948,46 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230327220122"></script>
+
+	<div id="order" aria-hidden="true" class="popup popup--order .popup_show ">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close">Закрити</button>
+				<div class="popup-order">
+					<div class="popup-order__title title title--blue">Замовити товар</div>
+					<a href="#" class="popup-order__image">
+						<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
+					</a>
+					<form action="files/sendmail/sendmail.php" method="POST" class="popup-order__form form-order">
+						<!-- <input type="text" name="form[email]" data-error="Error" placeholder="E-mail" class="input"> -->
+						<div class="form-order__product product-order">
+							<div class="product-order__code">Код: <span>ISS20301B</span></div>
+							<a href="#" class="product-order__name">Ліхтар габаритний діодний жовтий 24 V (в-во
+								ISSIKSAN)</a>
+						</div>
+						<div class="form-order__line line-order">
+							<label class="line-order__label" for="order-tel">Номер телефону <span>*</span></label>
+							<input class="line-order__input" type="tel" data-error="Error" name="form[order-tel]" id="order-tel" placeholder="+380 XX XXX-XX-XX" autocomplete="off">
+						</div>
+						<div class="form-order__line line-order">
+							<label class="line-order__label" for="order-name">Ім'я<span>*</span></label>
+							<input class="line-order__input" type="text" data-error="Error" name="form[order-name]" id="order-name" placeholder="Ім'я" autocomplete="off">
+						</div>
+						<div class="form-order__line line-order">
+							<label class="line-order__label" for="order-second-name">Прізвище<span>*</span></label>
+							<input class="line-order__input" type="text" data-error="Error" name="form[order-second-name]" id="order-second-name" placeholder="Прізвище" autocomplete="off">
+						</div>
+						<div class="form-order__line line-order">
+							<label class="line-order__label" for="order-comment">Коментар</label>
+							<textarea class="line-order__input" name="form[order-comment]" id="order-comment" cols="30" rows="5" placeholder="Ваш коментар" autocomplete="off"></textarea>
+						</div>
+						<button type="submit" class="button button button--border-blue">Замовити</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/app.min.js?_v=20230329205345"></script>
 </body>
 
 </html>
