--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="about.html">Про нас</a></li>
+
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html#cart-empty">Порожній кошик</a></li>
 			<li><a target="_blank" href="home.html#cart-full">Кошик з товаром</a></li>
+			<li><a target="_blank" href="home.html#order">Форма замовлення відсутнього товару</a></li>
+			<li><a target="_blank" href="home.html#order-confirmation">Підтвердження відправки форми замовлення відсутнього
+					товару</a></li>
+			<li><a target="_blank" href="home.html#popup-selection">Форма підбору запчастин</a></li>
+			<li><a target="_blank" href="home.html#popup-selection-confirmation">Підтвердження відправки форми підбору
+					запчастин</a></li>
+			<li><a target="_blank" href="home.html#footer-order">Умови замовлення</a></li>
+			<li><a target="_blank" href="home.html#footer-payment">Умови оплати</a></li>
+			<li><a target="_blank" href="home.html#footer-delivery">Умови доставки</a></li>
+			<li><a target="_blank" href="home.html#footer-conditions">Договір публічної оферти</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
