--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 	<title>Про нас</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230401212328">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230402164012">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,10 +52,10 @@
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="#" class="menu__link">Головна</a></li>
+							<li class="menu__item"><a href="home.html" class="menu__link">Головна</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Каталог</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
+							<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a></li>
+							<li class="menu__item"><a href="contacts.html" class="menu__link">Контакти</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -67,7 +67,7 @@
 				<div class="breadcrumbs__container">
 					<ul class="breadcrumbs__list">
 						<li class="breadcrumbs__item">
-							<a href="" class="breadcrumbs__link">Головна</a>
+							<a href="home.html" class="breadcrumbs__link">Головна</a>
 						</li>
 						<li class="breadcrumbs__item">
 							<span class="breadcrumbs__current">Про нас</span>
@@ -235,16 +235,16 @@
 						<button type="button" data-spoller class="spoller-footer__title">Навігація</button>
 						<ul class="spoller-footer__body">
 							<li class="spoller-footer__link">
-								<a href="#" class="">Головна</a>
+								<a href="home.html" class="">Головна</a>
 							</li>
 							<li class="spoller-footer__link">
 								<a href="#" class="">Каталог</a>
 							</li>
 							<li class="spoller-footer__link">
-								<a href="#" class="">Про нас</a>
+								<a href="about.html" class="">Про нас</a>
 							</li>
 							<li class="spoller-footer__link">
-								<a href="#" class="">Контакти</a>
+								<a href="contacts.html" class="">Контакти</a>
 							</li>
 							<li class="spoller-footer__link">
 								<a href="#" class="">Кошик</a>
@@ -839,7 +839,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230401212328"></script>
+	<script src="js/app.min.js?_v=20230402164012"></script>
 </body>
 
 </html>
