--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
 			<li><a target="_blank" href="about.html">Про нас</a></li>
+			<li><a target="_blank" href="contacts.html">Контакти</a></li>
 
 		</ol>
 		<h2>Попапи:</h2>
