--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230402164012">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230402170949">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,18 +48,16 @@
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</div>
 				</div>
-
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item"><a href="home.html" class="menu__link">Головна</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Каталог</a></li>
+							<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 							<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a></li>
 							<li class="menu__item"><a href="contacts.html" class="menu__link">Контакти</a></li>
 						</ul>
 					</nav>
 				</div>
-
 			</div>
 		</header>
 		<main class="contacts">
@@ -156,7 +154,7 @@
 								<a href="home.html" class="">Головна</a>
 							</li>
 							<li class="spoller-footer__link">
-								<a href="#" class="">Каталог</a>
+								<a href="catalog.html" class="">Каталог</a>
 							</li>
 							<li class="spoller-footer__link">
 								<a href="about.html" class="">Про нас</a>
@@ -462,8 +460,7 @@
 						</div>
 						<div class="form-selection__line line-selection">
 							<label class="line-selection__label" for="selection-tel">Номер телефону <span>*</span></label>
-							<input class="line-selection__input input" data-required data-validate type="tel" placeholder="+380 (__) ___-__-__
-							data-error=" Введіть номер телефону" name="form[selection-tel]" id="selection-tel" autocomplete="off">
+							<input class="line-selection__input input" data-required data-validate type="tel" placeholder="+380 (__) ___-__-__" data-error="Введіть номер телефону" name="form[selection-tel]" id="selection-tel" autocomplete="off">
 						</div>
 						<div class="form-selection__line line-selection">
 							<label class="line-selection__label" for="selection-name">Ім'я<span>*</span></label>
@@ -757,7 +754,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230402164012"></script>
+	<script src="js/app.min.js?_v=20230402170949"></script>
 </body>
 
 </html>
