--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li><a target="_blank" href="home.html">Головна</a></li>
 			<li><a target="_blank" href="about.html">Про нас</a></li>
 			<li><a target="_blank" href="contacts.html">Контакти</a></li>
-
+			<li><a target="_blank" href="catalog.html">Каталог запчастин</a></li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
