--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230402170949">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230404232105">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -78,7 +78,7 @@
 					<h3 class="popular-page__title title title--big">Популярні товари</h3>
 					<div class="popular-page__row">
 
-						<div class="popular-page__card product-card _stock-in">
+						<article class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
@@ -100,12 +100,12 @@
 										<div class="info__price">199 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
-						<div class="popular-page__card product-card _stock-in">
+						<article class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_3.jpg" alt="photo"></picture>
@@ -127,12 +127,12 @@
 										<div class="info__price">199 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
-						<div class="popular-page__card product-card _stock-out">
+						<article class="popular-page__card product-card _stock-out">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
@@ -156,9 +156,9 @@
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
-						<div class="popular-page__card product-card _stock-in">
+						<article class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
@@ -179,12 +179,12 @@
 										<div class="info__price">199 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
-						<div class="popular-page__card product-card _stock-in">
+						<article class="popular-page__card product-card _stock-in">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
@@ -205,12 +205,12 @@
 										<div class="info__price">10300 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
-						<div class="popular-page__card product-card _stock-out">
+						<article class="popular-page__card product-card _stock-out">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
 									<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
@@ -231,10 +231,10 @@
 										<div class="info__price">199 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
-									<button class="info__order button">Замовити</button>
+									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
 							</div>
-						</div>
+						</article>
 
 					</div>
 					<button class="popular-page__btn button button--border-blue _icon-arrow">Переглянути усі
@@ -370,7 +370,7 @@
 					</div>
 				</div>
 			</section>
-			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__partners partners">
+			<section class="page__partners partners">
 				<div class="partners__container">
 					<div class="partners__title title title--big">Наші партнери</div>
 					<!-- Оболонка слайдера -->
@@ -1319,7 +1319,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230402170949"></script>
+	<script src="js/app.min.js?_v=20230404232105"></script>
 </body>
 
 </html>
