--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a target="_blank" href="about.html">Про нас</a></li>
 			<li><a target="_blank" href="contacts.html">Контакти</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог запчастин</a></li>
+			<li><a target="_blank" href="products.html">Сторінка групи товарів</a></li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
