--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230404232105">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230405212914">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
 			</div>
 		</header>
 		<main class="catalog-page">
-			<nav class="contacts__breadcrumbs breadcrumbs">
+			<nav class="catalog-page__breadcrumbs breadcrumbs">
 				<div class="breadcrumbs__container">
 					<ul class="breadcrumbs__list">
 						<li class="breadcrumbs__item">
@@ -78,7 +78,7 @@
 					<h3 class="catalog__title title title--big">Категорії товарів</h3>
 					<div class="catalog__category">
 
-						<a href="#" class="catalog__card">
+						<a href="products.html" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source data-srcset="img/catalog/dvigun.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/catalog/dvigun.png" alt="image category"></picture>
 							</div>
@@ -800,7 +800,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230404232105"></script>
+	<script src="js/app.min.js?_v=20230405212914"></script>
 </body>
 
 </html>
