--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a target="_blank" href="contacts.html">Контакти</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог запчастин</a></li>
 			<li><a target="_blank" href="products.html">Сторінка групи товарів</a></li>
+			<li><a target="_blank" href="card.html">Сторінка продукту</a></li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
