--- a/card.html
+++ b/card.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 
 <head>
-	<title>Про нас</title>
+	<title>Сторінка продукту</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -60,132 +60,122 @@
 				</div>
 			</div>
 		</header>
-		<main class="about">
-			<nav class="about__breadcrumbs breadcrumbs">
+		<main class="card">
+			<nav class="card__breadcrumbs breadcrumbs">
 				<div class="breadcrumbs__container">
 					<ul class="breadcrumbs__list">
 						<li class="breadcrumbs__item">
 							<a href="home.html" class="breadcrumbs__link">Головна</a>
 						</li>
 						<li class="breadcrumbs__item">
-							<span class="breadcrumbs__current">Про нас</span>
+							<a href="catalog.html" class="breadcrumbs__link">Каталог</a>
+						</li>
+						<li class="breadcrumbs__item">
+							<a href="products.html" class="breadcrumbs__link">Двигун, паливна система</a>
+						</li>
+						<li class="breadcrumbs__item">
+							<span class="breadcrumbs__current">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</span>
 						</li>
 					</ul>
 				</div>
 			</nav>
-			<section class="about__us us-about">
-				<div class="us-about__container">
-					<h2 class="us-about__title title">Про нас</h2>
-					<div class="us-about__image">
-						<div class="us-about__item">
-							<picture><source data-srcset="img/about/photo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/about/photo.jpg" alt="photo"></picture>
-						</div>
-						<div class="us-about__waterlogo">
-							<img data-src="img/logo-water-full.svg" alt="water logo">
-						</div>
-					</div>
-					<div class="us-about__text">
-						<p>Компанії, яка займається продажами запчастин, може мати різний спектр діяльності та спеціалізації.
-							Вона може постачати запчастини для автомобілів різних марок та моделей, або ж бути спеціалізованою
-							на певному виді автомобільної техніки, наприклад, вантажних автомобілях.</p>
-						<p>Така компанія може працювати з клієнтами з усього світу та мати велику мережу партнерів, які
-							допомагають забезпечувати ефективне та швидке постачання запчастин до клієнтів. Крім того, вона
-							може пропонувати додаткові послуги, такі як консультації з вибору запчастин, технічні рекомендації,
-							гарантії на продукцію та інші.</p>
-						<p>Важливими факторами успіху такої компанії можуть бути якість продукції, рівень обслуговування,
-							конкурентоспроможна ціна, оперативність постачання та досвідчений персонал, що володіє глибокими
-							знаннями в галузі автомобільної техніки.</p>
-					</div>
-				</div>
-			</section>
-			<section data-watch data-watch-once data-watch-threshold="0.3" class="about__info-us info-us">
-				<div class="info-us__container">
-					<div class="info-us__item-card">
-						<div class="info-us__item"><span>13</span>років</div>
-						<div class="info-us__info">Досвіду на вітчизняному ринку запчастин.</div>
-					</div>
-					<div class="info-us__card">
-						<div class="info-us__image info-us__image--padding">
-							<img data-src="img/info-us/01.svg" alt="icon">
-						</div>
-						<div class="info-us__info">Пропонуємо понад 100000 деталей та комплектуючих від більше як 50
-							виробників Європи.
-						</div>
-					</div>
-					<div class="info-us__card">
-						<div class="info-us__image">
-							<img data-src="img/info-us/02.svg" alt="icon">
-						</div>
-						<div class="info-us__info">Доставляємо замовлення по Україні протягом 1-2 днів.
-						</div>
-					</div>
-					<div class="info-us__card">
-						<div class="info-us__image info-us__image--padding">
-							<img data-src="img/info-us/03.svg" alt="icon">
-						</div>
-						<div class="info-us__info">Діють гнучкі умови оплати, працюємо з ПДВ.
-						</div>
-					</div>
-					<div class="info-us__card">
-						<div class="info-us__image">
-							<img data-src="img/info-us/04.svg" alt="icon">
-						</div>
-						<div class="info-us__info">Надаємо гарантію на весь асортимент.
-						</div>
-					</div>
-				</div>
-			</section>
-			<section data-watch data-watch-once data-watch-threshold="0.3" class="about__partners partners">
-				<div class="partners__container">
-					<div class="partners__title title title--big">Наші партнери</div>
-					<!-- Оболонка слайдера -->
-					<div class="partners__slider swiper">
-						<!-- Частина слайдера, що рухається -->
-						<div class="partners__wrapper swiper-wrapper">
-							<!-- Слайд -->
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/bosch.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/bosch.png" alt="icon"></picture>
+			<section class="card__main">
+				<div class="card__container">
+					<div class="card__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</div>
+					<div class="card__code">Код: ISS20301B</div>
+					<div class="card__content">
+						<div class="card__image">
+							<div class="image-product">
+								<!-- Оболонка слайдера -->
+								<div class="image-product__slider swiper">
+									<!-- Частина слайдера, що рухається -->
+									<div class="image-product__wrapper swiper-wrapper">
+										<!-- Слайд -->
+										<div class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo product"></picture>
+										</div>
+										<div class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product2.png" alt="photo product"></picture>
+										</div>
+										<div class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product3.png" alt="photo product"></picture>
+										</div>
+									</div>
+									<button type="button" class="image-product-prev arrow _icon-arrow"></button>
+									<button type="button" class="image-product-next arrow _icon-arrow"></button>
 								</div>
 							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners//daf.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners//daf.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/man.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/man.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/mercedes.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/mercedes.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/renault.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/renault.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/sampa.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/sampa.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/scania.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/scania.png" alt="icon"></picture>
-								</div>
-							</div>
-							<div class="partners__slide swiper-slide">
-								<div class="partners__icon">
-									<picture><source data-srcset="img/partners/volvo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/partners/volvo.png" alt="icon"></picture>
+							<div class="image-preview">
+								<!-- Оболонка слайдера -->
+								<div class="image-preview__slider swiper">
+									<!-- Частина слайдера, що рухається -->
+									<div class="image-preview__wrapper swiper-wrapper">
+										<!-- Слайд -->
+										<div class="image-preview__slide swiper-slide">
+											<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo product"></picture>
+										</div>
+										<div class="image-preview__slide swiper-slide">
+											<picture><source data-srcset="img/product/product2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product2.png" alt="photo product"></picture>
+										</div>
+										<div class="image-preview__slide swiper-slide">
+											<picture><source data-srcset="img/product/product3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product3.png" alt="photo product"></picture>
+										</div>
+									</div>
+									<button type="button" class="image-preview-prev arrow _icon-arrow"></button>
+									<button type="button" class="image-preview-next arrow _icon-arrow"></button>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="partners__pagination swiper-pagination"></div>
+
+					<div class="card__info info-card">
+						<div class="info-card__action action-card">
+							<div class="action-card__availability">
+								<div class="action-card__price">199 грн</div>
+								<div class="action-card__in-stock ">В наявності</div>
+								<div class="action-card__out-stock ">Немає в наявності</div>
+							</div>
+							<div class="action-card__quantity">
+								<div data-quantity class="quantity">
+									<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+									<div class="quantity__input">
+										<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+									</div>
+									<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+								</div>
+							</div>
+							<button type="submit" class="action-card__button-in button button--blue">
+								<span>Купити</span>
+								<span>В кошику</span>
+							</button>
+							<button data-popup="#order" type="submit" class="action-card__button-out button button--blue">Замовити</button>
+						</div>
+						<div class="info-card__contacts contacts-info">
+							<div class="contacts-info__title">Для уточнення даних зв’яжіться з нами</div>
+							<a href="+380979193134" class="contacts-info__phone">+380 (97) 919-31-34</a>
+							<a href="+380996113391" class="contacts-info__phone">+380 (99) 611-33-91</a>
+							<div class="contacts-info__messenger">
+								<a href="#" class="_icon-viber"></a>
+								<a href="#" class="_icon-whatsap"></a>
+								<a href="#" class="_icon-telegram"></a>
+							</div>
+						</div>
+						<div class="info-card__return">
+							Повернення товару впродовж 14 днів <a href="">Детальніше</a>
+						</div>
+						<ul class="info-card__line line-info">
+							<li class="line-info__link _icon-cart">
+								<a data-popup="#footer-order" href="#">Замовлення</a>
+							</li>
+							<li class="line-info__link _icon-credit-card">
+								<a data-popup="#footer-payment" href="#">Оплата</a>
+							</li>
+							<li class="line-info__link _icon-truck">
+								<a data-popup="#footer-delivery" href="#">Доставка</a>
+							</li>
+						</ul>
+					</div>
+
 				</div>
 			</section>
 		</main>
