--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230404232105">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230405212914">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,10 +68,10 @@
 							<a href="home.html" class="breadcrumbs__link">Головна</a>
 						</li>
 						<li class="breadcrumbs__item">
-							<a href="home.html" class="breadcrumbs__link">Каталог</a>
+							<a href="catalog.html" class="breadcrumbs__link">Каталог</a>
 						</li>
 						<li class="breadcrumbs__item">
-							<span class="breadcrumbs__current">Про нас</span>
+							<span class="breadcrumbs__current">Двигун, паливна система</span>
 						</li>
 					</ul>
 				</div>
@@ -169,7 +169,7 @@
 						<div class="item-products__catalog catalog-products">
 							<article class="catalog-products__card product-card _stock-in">
 								<div class="product-card__body">
-									<a href="#" class="product-card__image-ibg">
+									<a href="card.html" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
 									</a>
 									<div class="product-card__code code-product">
@@ -177,7 +177,8 @@
 										<div class="code-product__value">ISS20301B</div>
 									</div>
 									<h2 class="product-card__name">
-										<a href="#">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий 24 V
+										<a href="card.html">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий
+											24 V
 											(в-во
 											ISSIKSAN)</a>
 									</h2>
@@ -197,7 +198,7 @@
 
 							<article class="catalog-products__card product-card _stock-in">
 								<div class="product-card__body">
-									<a href="#" class="product-card__image-ibg">
+									<a href="card.html" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_3.jpg" alt="photo"></picture>
 									</a>
 									<div class="product-card__code code-product">
@@ -205,7 +206,8 @@
 										<div class="code-product__value">ISS20301B</div>
 									</div>
 									<h2 class="product-card__name">
-										<a href="#">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий 24 V
+										<a href="card.html">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий
+											24 V
 											(в-во
 											ISSIKSAN)</a>
 									</h2>
@@ -1205,7 +1207,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230404232105"></script>
+	<script src="js/app.min.js?_v=20230405212914"></script>
 </body>
 
 </html>
